Fix scrollbar not working correctly

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,9 +2,17 @@
   background-image: url('./../images/Optimized-san_fran_2-min.JPG');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-attachment: fixed;
   height: 100vh;
+  -moz-margin-top: -2px;
   margin-top: -19px;
+  overflow-y: hidden;
+}
+
+@-moz-document url-prefix() {
+  .home {
+      margin-top: -20px;
+  }
 }
 
 .home-content {
