--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900');
-html, body, #root, .App {
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: hidden;
+html, body, #root {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   font-family: 'Raleway', sans-serif;
   background: #F4F4F4;
 }
@@ -17,8 +14,9 @@ body {
 }
 
 .social-media {
+  z-index: 3;
   float: left;
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   left: 10px;
 }
